overflow issue test fix

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -94,6 +94,7 @@
         align-items: center;
         // border: solid red 1px;
         height: 95vh;
+        overflow: hidden;
         .text-zone{
             position: relative;
             left: 0%;
